fixed admin page backend

--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -87,7 +87,7 @@
                 <div class="mb-3 row">
                     <label for="muteUser" class="form-label">Mute a user</label>
                     <div class=" col">
-                        <input type="text" class="form-control" id="muteUser" name="muteUser" >
+                        <input type="text" class="form-control" id="muteUser" name="muteUser">
                     </div>
                     <div class=" col"></div>
                     <div id="muteUser" class="form-text">select a muser to mute.</div>
@@ -95,8 +95,8 @@
                 <div class="mb-3 row align-items-center">
                     <label for="muteDuration" class="form-label">How long?</label>
                     <div class="input-group mb-3 col">
-                        <input type="number" class="form-control col-auto" id="muteDuration" name="muteDuration">
-                        <select class="form-select">
+                        <input type="number" class="form-control col-auto" id="durationMultiplier" name="durationMultiplier">
+                        <select name="dateType" id="dateType" class="form-select">
                             <option value="days" selected>days</option>
                             <option value="months">months</option>
                             <option value="years">years</option>
