--- a/public/css/establishment.css
+++ b/public/css/establishment.css
@@ -119,9 +119,11 @@ button.moreRev, .estabResponse, .imgBtn, .JBimgBtn, .ARBimgBtn {
     background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M5.921 11.9 1.353 8.62a.719.719 0 0 1 0-1.238L5.921 4.1A.716.716 0 0 1 7 4.719V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z' clip-rule='evenodd'/></svg>");
 }
 
+/*
 .otheroptions {
     
 }
+*/
 
 copy for icons
 {
