--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,7 +5,7 @@
     <div class="row gy-5">
         {{#each establishments}}
             <div class="col-lg-3">
-                <a href="/{{this.username}}">
+                <a href="/{{this.displayedName}}">
                     <div class="content">
                         <div class="img-parent"><img src="{{this.profilePicture}}" alt=""></div>
                         <div class="mt-3">
