--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -16,7 +16,7 @@
 
             {{!-- add Estab --}}
             <div class="collapse show" id="addEstabTab">
-                <form>
+                <form id="establishmentForm" name="establishmentForm" enctype="multipart/form-data" method="post"> 
                 <div class="mb-3 row align-items-center">
                     <div class="col-5 containHeight">
                         <label for="estabImageInput">
@@ -28,13 +28,13 @@
                         <div class="mb-3 row">
                             <label for="estabNameInput" class="form-label">Establishment Name</label>
                             <div class=" col-9">
-                                <input type="text" class="form-control" id="estabNameInput" >
+                                <input type="text" class="form-control" id="estabNameInput" name="estabNameInput">
                             </div>
                         </div>
                         <div class="mb-3 row">
                             <label for="estabDescInput" class="form-label">Description</label>
                             <div class="col-9">
-                                <textarea class="form-control" id="estabDescInput" rows="3"></textarea>
+                                <textarea class="form-control" id="estabDescInput" name="estabDescInput" rows="3"></textarea>
                             </div>
                             <div class="col"></div>
                         </div>
@@ -43,12 +43,12 @@
                             <div class="col">
                                 <label for="tag1Input" class="form-label">Tag 1</label>
                                 <div class="col">
-                                    <input type="text" class="form-control" id="tag1Input" >
+                                    <input type="text" class="form-control" id="tag1Input" name="tag1Input">
                                 </div></div>
                             <div class="col">
                                 <label for="tag2Input" class="form-label">Tag 2</label>
                                 <div class="col">
-                                    <input type="text" class="form-control" id="tag2Input" >
+                                    <input type="text" class="form-control" id="tag2Input" name="tag2Input">
                                 </div>
                             </div>
                             </div></div>
@@ -56,7 +56,7 @@
                         <div class="mb-3 row">
                             <label for="displayAddressInput" class="form-label">Display Address</label>
                             <div class=" col-9">
-                                <input type="text" class="form-control" id="displayAddressInput" >
+                                <input type="text" class="form-control" id="displayAddressInput" name="displayAddressInput">
                             </div>
                         </div>
                         <div class="row">
@@ -64,19 +64,19 @@
                             <div class="col">
                                 <label for="longitudeInput" class="form-label">Longitude</label>
                                 <div class="col">
-                                    <input type="number" class="form-control" id="longitudeInput" >
+                                    <input type="number" class="form-control" id="longitudeInput" name="longitudeInput">
                                 </div></div>
                             <div class="col">
                                 <label for="latitudeInput" class="form-label">Latitude</label>
                                 <div class="col">
-                                    <input type="number" class="form-control" id="latitudeInput" >
+                                    <input type="number" class="form-control" id="latitudeInput" name="latitudeInput">
                                 </div>
                             </div>
                             </div></div>
                         </div>
                     </div>
                 </div>                
-                <button type="submit" class="btn btn-success ms-auto">add Establishment </button>
+                <button id="submitEstabButton" type="submit" class="btn btn-success ms-auto" >add Establishment </button>
                 </form>
             </div>
 
