--- a/public/css/establishment-view.css
+++ b/public/css/establishment-view.css
@@ -2,7 +2,7 @@
 /*Includes: styling for map features*/
 
 .map-container {
-    height: 25%;
+    height: 35%;
     width: 100%;
     margin-top: 10px;
     border-radius: 10px;
@@ -18,8 +18,9 @@
 }
 
 .map {
-    height: 90%;
+    height: 99%;
     width: 99%;
     padding-left: 1%;
     padding-top: 1%;
+    padding-bottom: 1%;
   }
