--- a/public/css/establishment-view.css
+++ b/public/css/establishment-view.css
@@ -2,7 +2,7 @@
 /*Includes: styling for map features*/
 
 .map-container {
-    height: 35%;
+    height: 500px;
     width: 100%;
     margin-top: 10px;
     border-radius: 10px;
