--- a/src/views/establishment-view.hbs
+++ b/src/views/establishment-view.hbs
@@ -30,9 +30,10 @@
 
                 <div id="map" class="map"></div>
 
+                <p id="demo"></p>
+
                 <script type="text/javascript">
-
-
+                
                     var baseMapLayer = new ol.layer.Tile({
                         source: new ol.source.OSM()
                     });
@@ -41,8 +42,10 @@
                     source: new ol.source.OSM()
                     });
 
-                    //var center = ol.proj.fromLonLat([120.99375, 14.564306]);
-                    var center = ol.proj.fromLonLat([120.99375, 14.564306]);
+                    var lon = 120.99375;
+                    var lat = 14.564306;
+
+                    var center = ol.proj.fromLonLat([lon, lat]);
                     
                     var view = new ol.View({
                     center: center,
@@ -57,8 +60,8 @@
 
                     var featureMarker = new ol.Feature({
                         geometry: new ol.geom.Point(
-                        ol.proj.fromLonLat([120.99375, 14.564306])
-                        )  // Coordinates of Marker
+                        ol.proj.fromLonLat([lon, lat])
+                        )
                     });
 
                     function flytt() {
@@ -75,8 +78,6 @@
 
                     map.addLayer(markerVectorLayer);
 
-                    //Set custom marker
-
                     featureMarker.setStyle(new ol.style.Style({
                         image: new ol.style.Icon(({
                             scale: 0.09,
@@ -88,11 +89,6 @@
                     }));
 
                 </script>
-
-                <!--TO BE IMPLEMENTED AS AN EXTRA FEATURE-->
-                <!--
-                    <a href="" class="map-btn">view full map</a>
-                -->
             </div>
             <!--EDIT BOOKMARK END-->
             <div class="card mt-3">
