--- a/public/css/establishment-view.css
+++ b/public/css/establishment-view.css
@@ -12,15 +12,25 @@
     text-align: center;
 }
 
-.map-btn{
-    color: #c02537;
+.legend{
+    color:black;
     text-decoration: none;
 }
 
 .map {
-    height: 99%;
+    height: 440px;
     width: 99%;
     padding-left: 1%;
     padding-top: 1%;
     padding-bottom: 1%;
   }
+
+.legend_dlsu {
+    height: 6.5%;
+    width: 5%;
+}
+
+.legend_restuarant {
+    height: 6.5%;
+    width: 5%;
+}
